--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Ignore sensitive configuration files
+**/appsettings.json
+**/appsettings.Development.json
+**/local.settings.json
+
 # User-specific files
 *.rsuser
 *.suo
